--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ivory-llama",
+  "name": "through-the-dungeon",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,14 +15,11 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/icons": "^2.1.0",
-    "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.0.0",
-    "sanity-plugin-cloudinary": "^1.1.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
