--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "astro": "^2.0.18",
     "astro-sanity": "^1.1.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4"
   }
 }
