--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18",
-    "astro-sanity": "^1.1.3"
+    "@astrojs/tailwind": "^3.1.0",
+    "astro": "^2.1.2",
+    "astro-sanity": "^1.1.3",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "prettier": "^2.8.4"
