--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.1",
     "@astrojs/tailwind": "^3.1.0",
-    "astro": "^2.1.2",
+    "astro": "^2.1.3",
     "astro-sanity": "^1.1.3",
     "tailwindcss": "^3.2.7"
   },
