--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^3.1.0",
     "astro": "^2.1.3",
     "astro-sanity": "^1.1.3",
+    "dotenv": "^16.0.3",
     "photoswipe": "^5.3.6",
     "tailwindcss": "^3.2.7"
   },
