--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "astro-sanity": "^1.1.3",
     "dotenv": "^16.0.3",
     "photoswipe": "^5.3.6",
+    "sass": "^1.59.3",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
