--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "astro": "^2.1.3",
     "astro-sanity": "^1.1.3",
     "dotenv": "^16.0.3",
+    "minimasonry": "^1.3.1",
     "photoswipe": "^5.3.6",
     "photoswipe-dynamic-caption-plugin": "^1.2.7",
     "sass": "^1.59.3",
